--- a/css/12bool.css
+++ b/css/12bool.css
@@ -1,6 +1,5 @@
 /*inizio Debug*/
 .debug .container{
-  background-color: green;
   border: 1px solid red;
 }
 
@@ -8,13 +7,15 @@
   border: 1px solid black;
   background-color: pink;
   height: 300px;
-  padding-top: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
+}
+.debug [class*="col-"] > .container{
+  padding: 5px;
+  height: 100%;
 }
 .debug [class*="col-"] > .container [class*="col-"]{
   background-color: lightcoral;
-  height: 280px;
+  height: 100%;
+  border: 1px solid white;
 }
 /*fine debug*/
 
