--- a/css/12bool.css
+++ b/css/12bool.css
@@ -11,6 +11,7 @@
 }
 .debug [class*="col-"] > .container{
   height: 100%;
+  border: none;
 }
 .debug [class*="col-"] > .container [class*="col-"]{
   background-color: lightcoral;
